Fixed speed option spacing issue in video

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
@@ -124,6 +124,7 @@
 
 		li {
 			list-style-type: none !important;
+			margin: 0 !important;
 		}
 
 	}
